--- a/src/style/Forgetpwd.css
+++ b/src/style/Forgetpwd.css
@@ -1,65 +1,53 @@
-.forgetpwd {
+.forgetpwd-content {
 	width: 100%;
-	 padding-top: 0px!important;
-	padding-bottom: 5rem;
-}
-
-.forgetpwd section:nth-child(1) {
-	width: 100%;
-}
-
-.forgetpwd section:nth-child(1) p {
-	text-align: right;
-	font-size: 14px;
-	color: #000000;
-	font-weight: 500;
-	padding-top: 20px;
-	padding-right: 20px;
-}
-/*设置登录图标*/
-.forgetpwd section:nth-child(2) {
-	width: 100%;
-}
-
-.forgetpwd section:nth-child(2) div {
-	width: 250px;
-	margin: 0 auto;
-	padding-top: 50px;
-}
-
-.forgetpwd section:nth-child(2) img {
-	width: 85%;
 	height: 100%;
-	display: block;
-	margin: 0 auto;
+	padding-top: 0px!important;
+	background: url('../img/background.jpg');
+	background-size: 100%;
+	/* padding-bottom: 5rem; */
 }
+
+.forgetpwd-content section:nth-child(1) {
+	width: 100%;
+}
+
+.forgetpwd-content section:nth-child(1) .login-logo {
+	width: 80px;
+	height: 77.83px;
+	margin: 0 auto;
+	background: url('../img/logo.png');
+	background-size: 80px 77.83px;
+	margin-top: 40px;
+}
+
 /*设置忘记密码输入框*/
-.forgetpwd section:nth-child(3) {
+.forgetpwd-content section:nth-child(2) {
 	margin-top: 50px;
 }
 
-.forgetpwd section:nth-child(3) .otc_forgetpwd {
+.forgetpwd-content section:nth-child(2) .otc_forgetpwd {
 	border: none;
-	padding: 5px;
 }
 
-.forgetpwd section:nth-child(3) .otc_forgetpwd .am-list {
-	width: 85%;
+.forgetpwd-content section:nth-child(2) .otc_forgetpwd .am-list {
+	width: 93%;
 	margin: 0 auto;
 }
 
-.forgetpwd section:nth-child(3) .otc_forgetpwd .am-list .am-list-body {
-	background: #f5f5f9;
+.forgetpwd-content section:nth-child(2) .otc_forgetpwd .am-list .am-list-body {
 	list-style: none;
 	border: none;
+	background: none;
 	position: inherit;
 }
-
+.forgetpwd-content section:nth-child(2) .otc_forgetpwd .am-list .am-list-body>div{
+	margin-bottom: 10px;
+}
 .otc_forgetpwd .am-list-item {
 	background: #f5f5f9;
-	border: 1px solid #f41938;
-	margin-bottom: 20px;
-	border-radius: 30px;
+	border: 1px solid #fff;
+	border-radius: 5px;
+	background: none;
 }
 
 .otc_forgetpwd .am-list-item img {
@@ -89,10 +77,8 @@
 	height: 3.7rem;
 	min-height: 44px;
 	overflow: hidden;
-	border: 1px solid #f41938;
-	border-radius: 3.7rem;
-	background: url(../img/bc-red.jpg) no-repeat;
-	margin-bottom: 20px;
+	border: 1px solid #fff;
+	border-radius: 3.5px;
 }
 
 .otc_forgetpwd .otc-code .otc-code-l {
@@ -113,9 +99,8 @@
 	min-height: 44px;
 	text-align: center;
 	line-height: 3.7rem;
-	border-left: 2px solid #f41938;
-	background: #f41938;
-	color: #FFFDEF;
+	border-left: 2px solid #fff;
+	color: #ccc;
 	font-size: 14px;
 }
 
@@ -128,23 +113,38 @@
 	justify-content: center;
 	height: 3.7rem;
 	margin: 0 auto;
-	border: 1px solid #FF1100;
-	border-radius:3.7rem;
-	color: #FFFFFF;
-	font-size: 1.5rem;
-	background: #f41938;
-	box-shadow: 0 0.12rem 0.16rem #f41938;
+	border-radius: 5px;
+	font-size: 13px;
+	color: #fff;
+	background: #e56d48;
+	border: none;
 }
 
 .otc_forgetpwd #otc_but div {
 	text-align: center;
 	color: #FFFFFF;
-	font-size: 17px;
-	letter-spacing: 10px;
+	font-size: 13px;
+	letter-spacing: 5px;
 }
-.forgetpwd .am-list-item .am-input-control input{
+.forgetpwd-content .am-list-item .am-input-control input{
 	font-size: 14px;
 }
-.forgetpwd .am-list-item .am-input-label.am-input-label-5{
-	width: 55px;
+.forgetpwd-content .am-list-item .am-input-label.am-input-label-5{
+	width: 25px;
+	color: #fff;
+}
+
+.forget-backlogin{
+	text-align: center;
+    width: 100%;
+	margin-top: 10px;
+}
+
+.forget-backlogin a{
+	color: #fff;
+	font-size: 12px;
+}
+.forget-backlogin a .icon{
+	margin-right: 5px;
+	font-size: 12px;
 }
