--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -1,11 +1,14 @@
 .login {
 	width: 100%;
-	padding-bottom: 5rem;
-	 padding-top: 0px!important;
-	
+	height: 100%;
+	/* padding-bottom: 5rem; */
+	padding-top: 0px!important;
+	background: url('../img/background.jpg');
+	background-size: 100%;
+	position: relative;
 }
 
-.login section:nth-child(1) {
+/* .login section:nth-child(1) {
 	width: 100%;
 }
 
@@ -16,51 +19,65 @@
 	font-weight: 500;
 	padding-top: 20px;
 	padding-right: 20px;
-}
+} */
 /*设置登录图标*/
-.login section:nth-child(2) {
+.login section:nth-child(1) {
 	width: 100%;
+	margin-top: 40px;
 }
 
-.login section:nth-child(2) div {
-	width: 250px;
+.login section:nth-child(1) .login-logo {
+	width: 80px;
+	height: 77.83px;
 	margin: 0 auto;
-	padding-top: 50px;
+	background: url('../img/logo.png');
+	background-size: 80px 77.83px;
 }
 
-.login section:nth-child(2) img {
+.login section:nth-child(1) img {
 	width: 85%;
 	height: 100%;
 	display: block;
 	margin: 0 auto;
 }
 /*设置登陆框*/
-.login section:nth-child(3) {
+.login section:nth-child(2) {
 	margin-top: 50px;
 }
 
-.login section:nth-child(3) .otc_login {
+.login section:nth-child(2) .otc_login {
 	border: none;
-	padding: 5px;
 }
 
-.login section:nth-child(3) .otc_login .am-list {
-	width: 85%;
+.login section:nth-child(2) .otc_login .am-list {
+	width: 93%;
 	margin: 0 auto;
 }
 
-.login section:nth-child(3) .otc_login .am-list .am-list-body {
-	background: #f5f5f9;
+.login section:nth-child(2) .otc_login .am-list .am-list-body {
+	background: none;
 	list-style: none;
 	border: none;
 	position: inherit;
 }
+.otc_login .login-lang{
+	width: 100%;
+	height: 40px;
+	text-align: center;
+	line-height: 40px;
+	color: #fff;
+	font-size: 14px;
+}
+.otc_login .am-list .am-list-body>div{
+	border-radius: 5px;
+	border: 1px solid #fff;
+	margin-bottom: 10px;
+}
 
 .otc_login .am-list-item {
 	height: 3.7rem;
-	background: #f5f5f9;
-	border: 1px solid #f41938;
-	margin-bottom: 20px;
+	background: none;
+	border: 1px solid #fff;
 	border-radius: 30px;
 }
 
@@ -89,7 +106,7 @@
 	height: 3.7rem;
 	min-height: 44px;
 	overflow: hidden;
-	border: 1px solid #f41938;
+	border: 1px solid #fff;
 	border-radius: 30px;
 	/*background: url(../img/bc-red.jpg) no-repeat;*/
 }
@@ -116,7 +133,7 @@
 	height: 44px;
 	text-align: center;
 	line-height: 44px;
-	border-left: 1px solid #f41938;
+	border-left: 1px solid #fff;
 	color: #FFFDEF;
 	font-size: 16px;
 	box-sizing: content-box;
@@ -125,15 +142,14 @@
 
 /*设置忘记密码*/
 .otc_login .forgetpwd {
-	text-align: right;
+	text-align: center;
 	width: 100%;
 	margin-top: 10px;
-	margin-bottom: 25px;
 }
 
 .otc_login .forgetpwd a {
-	color: #0e5bc0;
-	font-size: 14px;
+	color: #fff;
+	font-size: 12px;
 	margin-right: .7rem;
 }
 /*设置登录按钮*/
@@ -143,12 +159,14 @@
 	justify-content: center;
 	height: 3.7rem;
 	margin: 0 auto;
-	border: 1px solid #FF1100;
-	border-radius:3.7rem;
-	color: #FFFFFF;
-	font-size: 1.5rem;
-	background: #f41938;
-	box-shadow: 0 0.12rem 0.16rem #f41938;
+	border-radius: 5px;
+	font-size: 12px;
+	color: #fff;
+	background: #e56d48;
+	border: none;
+}
+.login #otc_but .am-list-line .am-list-content{
+	font-size: 14px;
 }
 
 .login #otc_but div {
@@ -158,13 +176,30 @@
 }
 
 .login .am-list-item .am-input-control input{
+	color: #fff;
 	font-size: 14px;
 }
 .login .am-list-item .am-input-label.am-input-label-5{
-	width: 55px;
+	width: 25px;
+	color: #fff;
 }
 @media (-webkit-min-device-pixel-ratio: 2), not all, (min-resolution: 2dppx){
 	html:not([data-scale]) .login .am-list-body::after{
 		height: 0px;
 	}
+}
+
+.login-register-btn{
+	position: absolute;
+	bottom: 15px;
+	width: 100%;
+	text-align: center;
+}
+.login-register-btn p{
+	font-size: 12px;
+	color: #fff;
+}
+.login-register-btn p a{
+	font-size: 12px;
+	color: #fff;
 }
